kyverno/kyverno-policies/overlays/prod/mutate-batch-image-env-patch.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-batch-image-env
spec:
  rules:
  - name: add-env-vars
    mutate:
      patchStrategicMerge:
        spec:
          template:
            spec:
              containers:
              - name: "*"  
                env:
                - name: ENVIRONMENT
                  value: "production"
                - name: DEBUG_MODE
                  value: "false"
                - name: LOG_LEVEL
                  value: "warn"
                - name: METRICS_ENABLED
                  value: "true"
                - name: TRACING_ENABLED
                  value: "true"
